--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
   "author": "JD",
   "license": "MIT",
   "devDependencies": {
+    "@babel/cli": "^7.7.0",
     "@babel/core": "^7.5.5",
     "@babel/node": "^7.5.5",
+    "@babel/plugin-transform-runtime": "^7.7.6",
     "@babel/preset-env": "^7.5.5",
     "nodemon": "^1.19.1"
   },
   "dependencies": {
-    "@babel/cli": "^7.7.0",
+    "@babel/runtime": "^7.7.7",
     "cors": "^2.8.5",
     "dotenv": "^8.1.0",
     "express": "^4.17.1"
